Added CREST URL to config-example.ini

--- a/config-example.ini
+++ b/config-example.ini
@@ -240,6 +240,8 @@ whitelist=Off
 ; https://host/relative_path/internal/auth/ccpoauthcallback, where host and
 ; relative_path match the settings above.
 ;
+; NOTE: Please make sure the required scopes for reading and writing fittings are enabled or CREST import fittings wont work.
+;
 ; NOTE: WILL NOT WORK UNLESS YOU HAVE BOTH https_available AND
 ; https_canonical ENABLED.
 ;
@@ -250,8 +252,11 @@ whitelist=Off
 ccp_oauth_available=Off
 
 ; Switch between TQ/Sisi implementation
-ccp_oauth_root="https://sisilogin.testeveonline.com"
-;ccp_oauth_root="https://login.eveonline.com"
+;ccp_oauth_root="https://sisilogin.testeveonline.com"
+ccp_oauth_root="https://login.eveonline.com"
+
+; Crest URL
+ccp_oauth_crest="https://crest-tq.eveonline.com"
 
 ; Given to you by CCP.
 ccp_oauth_clientid=""
